--- a/jwgg/src/main/resources/application.properties
+++ b/jwgg/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.servlet.session.tracking-modes=cookie
 #server.servlet.session.timeout=60
 spring.messages.basename=messages,errors
+spring.profiles.active=local
