--- a/jwgg/src/main/resources/application.properties
+++ b/jwgg/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.servlet.session.tracking-modes=cookie
 #server.servlet.session.timeout=60
 spring.messages.basename=messages,errors
 spring.profiles.active=local
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=sa
+
+#MyBatis
+mybatis.type-aliases-package=jung.jwgg.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.jung.jwgg.repository.item.mybatis=trace
