--- a/jwgg/src/test/resources/application.properties
+++ b/jwgg/src/test/resources/application.properties
@@ -1,1 +1,8 @@
 spring.profiles.active=test
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.username=sa
+
+#MyBatis
+mybatis.type-aliases-package=jung.jwgg.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.jung.jwgg.repository.mybatis=trace
