--- a/jwgg/src/test/resources/application.properties
+++ b/jwgg/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 spring.profiles.active=test
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-#spring.datasource.username=sa
+
+#jdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
 
 #MyBatis
 mybatis.type-aliases-package=jung.jwgg.domain
