#15 - lol 챔피언 추천 시스템 개발
* 챔피언 테이블, 챔피언 연관관계 테이블 설계 및 생성
* 챔피언 도메인 작성
* 챔피언 repository 및 mapper 작성
* 챔피언 service 및 controller 작성
* champs 페이지 작성

--- a/jwgg/src/main/resources/application.properties
+++ b/jwgg/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 server.servlet.session.tracking-modes=cookie
 #server.servlet.session.timeout=60
 spring.messages.basename=messages,errors
+
 spring.profiles.active=local
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.username=sa
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
 spring.datasource.username=sa
+spring.datasource.password=1111
+
+
+#jdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
 
 #MyBatis
 mybatis.type-aliases-package=jung.jwgg.domain
