--- a/jwgg/src/test/resources/application.properties
+++ b/jwgg/src/test/resources/application.properties
@@ -1,4 +1,7 @@
 spring.profiles.active=test
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
+#spring.datasource.username=sa
+#spring.datasource.password=1111
 
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
@@ -6,4 +9,4 @@ logging.level.org.springframework.jdbc=debug
 #MyBatis
 mybatis.type-aliases-package=jung.jwgg.domain
 mybatis.configuration.map-underscore-to-camel-case=true
-logging.level.jung.jwgg.repository.mybatis=trace
+logging.level.jung.jwgg.repository.item.mybatis=trace
