#21 - 카운터 관계 등록 기능 추가

--- a/jwgg/src/main/resources/errors.properties
+++ b/jwgg/src/main/resources/errors.properties
@@ -44,3 +44,6 @@ Range={0}, {2} ~ {1} 허용
 Max={0}, 최대 {1}
 
 Size.member.password=비밀번호는 최소 {1}자 이상 {2}자 이하여야 합니다.
+
+noSuchChamp = 챔피언 이름을 잘못 입력했습니다.
+dedupe = 이미 저장된 데이터 입니다.
