--- a/jwgg/src/main/resources/application.properties
+++ b/jwgg/src/main/resources/application.properties
@@ -6,10 +6,11 @@ spring.profiles.active=local
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 #spring.datasource.username=sa
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
-spring.datasource.username=sa
-spring.datasource.password=1111
-
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
+#spring.datasource.username=sa
+#spring.datasource.password=1111
+# 임베디드 모드로 설정시 위 3줄 주석처리 해야함
+# H2 데이터베이스 연동시 위 3줄 주석 풀어야함
 
 #jdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
