--- a/jwgg/src/main/resources/application.properties
+++ b/jwgg/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.servlet.session.tracking-modes=cookie
 #server.servlet.session.timeout=60
 spring.messages.basename=messages,errors
 
-spring.profiles.active=local
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=sa
+#spring.profiles.active=local
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.username=sa
 
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
 #spring.datasource.username=sa
